<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginTop="8dp"
    tools:context="com.soha.sohalocation.activity.AboutActivity">

    <LinearLayout
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="22sp"
            android:text="@string/about" />
        <View
            android:layout_height="1.5dp"
            android:layout_width="match_parent"
            android:id="@+id/view"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary" />
    </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginTop="120dp">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/product_by" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="@string/alireza_rousta" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:autoLink="email"
        android:textColorLink="#00aeff"
        android:text="@string/email1"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:autoLink="phone"
        android:textColorLink="#00aeff"
        android:text="@string/phone1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="italic"
        android:text="@string/all_rights_reserved" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AppVersion"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="italic"
        android:textColor="@color/colorPrimary" />
</LinearLayout>
</LinearLayout>