<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/SettingThemeNoActionBar">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="22sp"
            android:text="@string/camera_setting" />
        <View
            android:layout_height="1.5dp"
            android:layout_width="match_parent"
            android:id="@+id/view"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/delaytime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capture_delay_time" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_delaytime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="delay"
                android:inputType="number"
                android:padding="13dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_picture_size" />
            <TextView
                android:id="@+id/resolutiontxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/box"
                android:gravity="center"
                android:hint="@string/picture_size"
                android:onClick="setResolution"
                android:padding="13dp"
                android:textColor="@color/color3"
                android:textColorHint="@color/color3"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_picture_orientation" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/orientationtxt"
                android:textColor="@color/color3"
                android:textColorHint="@color/color3"
                android:background="@drawable/box"
                android:padding="13dp"
                android:hint="@string/orientation"
                android:onClick="setOrientation"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>