<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/checkboxLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:gravity="center">
        <View
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="201dp"
        android:gravity="center"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_start_location_updates"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/box"
                android:text="@string/start_updates"
                android:textColor="@color/color3" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_stop_location_updates"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/boxoff"
                android:enabled="false"
                android:text="@string/stop_updates"
                android:textColor="@color/color3" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>