<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="264dp"
        android:layout_height="264dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/btn_step_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/btn_step_next"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:paddingBottom="25sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/color1"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_step"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/box"
            android:textStyle="bold"
            android:textColor="@color/color3"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AppVersion"
            android:paddingTop="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="italic"
            android:textColor="@color/colorPrimaryDark"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>